<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
        <artifactId>instrument-simulator-jdk</artifactId>
        <groupId>com.shulie.instrument.simulator</groupId>
        <version>1.0.1</version>
    </parent>
    <modelVersion>4.0.0</modelVersion>

    <artifactId>instrument-simulator-jdk9</artifactId>

    <properties>
        <jdk.version>1.9</jdk.version>
        <!--suppress UnresolvedMavenProperty -->
        <jdk.home>${env.JAVA_9_HOME}</jdk.home>
    </properties>

    <dependencies>
        <dependency>
            <groupId>com.shulie.instrument.simulator</groupId>
            <artifactId>instrument-simulator-jdk-api</artifactId>
        </dependency>
    </dependencies>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-jar-plugin</artifactId>
                    <executions>
                        <execution>
                            <phase>package</phase>
                        </execution>
                    </executions>
                    <configuration>
                        <archive>
                            <manifestEntries>
                                <Automatic-Module-Name>simulator.bootstrap.java9</Automatic-Module-Name>
                            </manifestEntries>
                        </archive>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-deploy-plugin</artifactId>
                    <version>2.8.2</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-assembly-plugin</artifactId>
                    <version>2.6</version>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.0</version>
                <configuration>
                    <source>${jdk.version}</source>
                    <target>${jdk.version}</target>
                    <encoding>UTF-8</encoding>
                    <showDeprecation>true</showDeprecation>
                    <fork>true</fork>
                    <debug>true</debug>
                    <optimize>true</optimize>
                    <compilerVersion>${jdk.version}</compilerVersion>
                    <executable>${jdk.home}/bin/javac</executable>
                    <compilerArgs>
                        <arg>--add-exports=java.base/jdk.internal.loader=ALL-UNNAMED</arg>
                        <arg>--add-exports=java.base/jdk.internal.module=ALL-UNNAMED</arg>
                        <arg>--add-exports=java.base/jdk.internal.misc=ALL-UNNAMED</arg>
                    </compilerArgs>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>3.0.1</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>jar-no-fork</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>